data/derived/comb/progs/unify/prog6744.ml.out
Characters 29-40:
  let stringOfList f l = "[" ^ List.map(f) ^ sepConcat(";" l) ^ "]";;
                               ^^^^^^^^^^^
Error: This expression has type 'a list -> 'b list
       but an expression was expected of type string
